--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
   background-color: #2f5cff;
   padding: 10px 20px;
-  height: 60px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,12 +17,14 @@
   transform: translateX(-50%);
 }
 
-/* Hamburger menu */
+
 .hamburger {
   display: none;
   cursor: pointer;
   position: absolute;
   right: 20px;
+  top: 0;
+  margin-top: 15px;
 }
 
 .hamburger .bar {
@@ -55,8 +57,14 @@
 }
 
 .nav-item {
-  position: relative; 
+  position: relative;
   margin: 0 10px;
+}
+
+#nav-item {
+  position: relative;
+  margin: 3px 2px;
+  
 }
 
 .nav-link {
@@ -69,16 +77,38 @@
   position: relative;
 }
 
+#nav-link {
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  padding-bottom: 7px;
+  display: inline-block;
+  cursor: pointer;
+  position: relative;
+}
+
 .nav-link::after {
   content: "";
   position: absolute;
   left: 50%;
   bottom: 0;
   width: 0;
-  height: 2px; 
+  height: 2px;
   background-color: #ffffff;
   transition: width 0.3s ease, left 0.3s ease;
-  transform: translateX(0%); 
+  transform: translateX(0%);
+}
+
+#nav-link::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  width: 0;
+  height: 3px;
+  background-color: #b5b5b5;
+  transition: width 0.3s ease, left 0.3s ease;
+  transform: translateX(0%);
 }
 
 .nav-link:hover::after {
@@ -86,14 +116,20 @@
   left: 0;
 }
 
+#nav-link:hover::after {
+  width: 100%;
+  left: 0;
+}
+
 /* Sidebar styles */
 .sidebar {
   position: fixed;
+
+  right: -3590px;
   top: 0;
-  right: -260px;
-  width: 260px;
-  height: 50%;
-  background-color: #2f5cff;
+  height: 100%;
+  width: 100%;
+  background-color: #096096;
   z-index: 1001;
   transition: right 0.3s ease;
   display: flex;
@@ -140,16 +176,17 @@
   opacity: 1;
 }
 
-/* Media query for responsiveness */
+
 @media (max-width: 1330px) {
   .nav-list {
-      display: none;
+    display: none;
   }
 
   .hamburger {
-      display: block;
+    display: block;
   }
 }
+
 .back-to-top {
   position: fixed;
   bottom: 50px;
@@ -182,7 +219,7 @@
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 991001;
-  /* loader yuqori qatlamda bo'lishi kerak */
+
 }
 
 .loader {
@@ -197,10 +234,10 @@
 .loader:before,
 .loader:after {
   background:
-      radial-gradient(closest-side at 50% 12.5%,
-          #33a4f0 96%, #0000) 50% 0/20% 80% repeat-y,
-      radial-gradient(closest-side at 12.5% 50%,
-          #33f0d0 96%, #0000) 0 50%/80% 20% repeat-x;
+    radial-gradient(closest-side at 50% 12.5%,
+      #33a4f0 96%, #0000) 50% 0/20% 80% repeat-y,
+    radial-gradient(closest-side at 12.5% 50%,
+      #33f0d0 96%, #0000) 0 50%/80% 20% repeat-x;
 }
 
 .loader:before,
@@ -216,7 +253,6 @@
 
 @keyframes l26 {
   100% {
-      transform: rotate(1turn)
+    transform: rotate(1turn)
   }
 }
-
