--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -129,7 +129,7 @@
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: #096096;
+  background-color: #000000ac;
   z-index: 1001;
   transition: right 0.3s ease;
   display: flex;
